[package]
name = "obozrenie-core"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
description = "Obozrenie Game Server Browser. Core library."
repository = "https://github.com/game-recon/obozrenie-core"
keywords = ["game", "games", "browser"]
license = "GPL-3.0"

[dependencies]
geoip = "0.0.11"
custom_derive = "0.1"
newtype_derive = "0.1"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
rgs_models = "0.2"
